TWC3167-6520: DE Word wrap not working as expected fix. (#2365)

--- a/Intel.MyDeals/Client/src/app/contract/dealEditor/dealEditor.component.css
+++ b/Intel.MyDeals/Client/src/app/contract/dealEditor/dealEditor.component.css
@@ -390,7 +390,7 @@ kendo-grid#dealEditor {
 }
 
 .opDealEditorGrids.k-grid .uiControlDiv {
-    line-height: 2 !important;
+   /* line-height: 2 !important;*/
     margin-bottom: 0 !important;
     margin-top: 0 !important;
     padding: 4px 8px !important
